--- a/app/templates/search_goods.hbs
+++ b/app/templates/search_goods.hbs
@@ -41,7 +41,7 @@
                 <li class="goods_search list">
                   <div class="row" {{action "selectItem" item}}>
                     <div class="small-12 large-12 columns">
-                      {{cloudinary-image-tag src=item.displayImageUrl item=item}}
+                      {{cloudinary-image-tag src=item.displayImageUrl item=item displayItemOverlay=true}}
                     </div>
                   </div>
                 </li>
