move navbar to partial

--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -18,9 +18,7 @@
     }
     display: inline-flex;
   }
-  .category_select.fa {
-    position: absolute;
-    margin-left: -1.5vw;
+  .dropdown-icon{
     font-size: 0.8rem;
     z-index: -1;
     cursor: pointer;
@@ -77,6 +75,11 @@
   .current{
     color: #fff;
     font-weight: 900;
+    font-size: 0.7em;
+  }
+
+  .category_name{
+    font-size: unset !important;
   }
 
   .breadcrumbs>* {
@@ -131,4 +134,5 @@
 
 .underline-link {
   text-decoration: underline;
+  cursor: pointer;
 }
