--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -2,11 +2,10 @@
   <section class='main-section'>
     <h1 class="browse-title" align="center">{{t "browse.title"}}</h1>
   </section>
-  <section class="right-small" style="float: right;">
-    {{#link-to "search_goods"}}
-      <i aria-hidden="true" class="fa fa-search"></i>
-    {{/link-to}}
-  </section>
+  {{!-- commented temporarily to hide search icon from live app until search feature is available --}}
+  {{!-- <section class="right-small" style="float: right;">
+    <i aria-hidden="true" class="fa fa-search"></i>
+  </section> --}}
 </nav>
 <section class="main-section">
   <div class="row home_section show-for-small small light">
