--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -78,15 +78,14 @@ $sidebar-width: 7.8rem;
       bottom: 0;
       position: absolute;
       padding-bottom: 2rem;
-      text-align: center;
       font-size: 0.6rem;
-      width: 100%;
+      text-align: center;
+      width: 100%;;
 
       .line {
         margin-bottom: 0.8rem;
-        padding: 5px;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
 
         a {
           text-decoration: underline;
@@ -94,7 +93,6 @@ $sidebar-width: 7.8rem;
           color: #a3aab6;
           display: inline;
           padding: 0;
-          margin: 0 0.4rem;
 
           &:hover {
             background-color: transparent;
