--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -10,13 +10,12 @@
       <h1>{{pageTitle}}</h1>
     </section>
 
-    {{#if showSearchIcon}}
-      {{#link-to "search_goods"}}
-        <section class="right-small {{if hasCartItems 'cart-icon-with-search' 'search-icon'}}" align="center">
-          <i aria-hidden="true" class="fa fa-search"></i>
-        </section>
-      {{/link-to}}
-    {{/if}}
+    {{!-- commented temporarily to hide search icon from live app until search feature is available --}}
+    {{!-- {{#if showSearchIcon}}
+      <section class="right-small {{if hasCartItems 'cart-icon-with-search' 'search-icon'}}" align="center">
+        <i aria-hidden="true" class="fa fa-search"></i>
+      </section>
+    {{/if}} --}}
 
     {{#if hasCartItems}}
       <section class="right-small" {{action 'displayCart'}}>
