--- a/app/templates/components/cloudinary-image-tag.hbs
+++ b/app/templates/components/cloudinary-image-tag.hbs
@@ -2,11 +2,17 @@
   <img src="/assets/images/image-loading.gif" class="cl-loading-img {{unless loading 'hidden'}}"/>
   <img src="{{src}}" class="cl-item-image {{if loading 'hidden'}} {{if isSmallScreen 'profile'}}"/>
 
-  {{#if displayItemName}}
+  {{#if displayItemOverlay}}
     <div class="image-item-overlay">
       <div class="item_desc">
         <li class="ellipsis two-line-ellipsis">
-          {{item.packageType.name}}
+          <span class="item-package-category">
+            {{item.packageType.name}}
+          </span>
+          :
+          <span class="item-notes">
+            {{item.notes}}
+          </span>
         </li>
       </div>
     </div>
