--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -5,8 +5,8 @@
 <div class="home_page">
   <div class="scroller">
     <div class="show-for-medium-up">
-      <img src="/assets/images/home-bg.jpg" id="image-background" />
-      <div id="image-overlay"></div>
+      <div id="image-background" class="image-overlay"/>
+      <div class="image-overlay tinted"></div>
     </div>
     <!-- Introduction -->
     <div class="content">
