--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -94,9 +94,9 @@
           {{/each}}
 
           {{#if presentInCart}}
-            <button class="request-item" {{action 'removeItem' item}}> {{t "item.remove_item"}} </button>
+            <button class="request-item" {{action 'remove' item target=cart}}> {{t "item.remove_item"}} </button>
           {{else}}
-            <button class="request-item" {{action 'requestItem' item}}> {{t "item.request_item"}} </button>
+            <button class="request-item" {{action 'add' item target=cart}}> {{t "item.request_item"}} </button>
           {{/if}}
 
           <div class="item_details item_categories">
