--- a/app/templates/cart_content/_items.hbs
+++ b/app/templates/cart_content/_items.hbs
@@ -1,13 +1,14 @@
-{{#each cart.content as |record|}}
-  <li>
+{{#each cart.groupedPackages as |row|}}
+  <li class="no-bullet">
     <div class="row">
-      <div class="large-3 medium-3 columns cart-redirect-link {{if (is-not record.available) disabled}}" {{action 'updateCartItemParams' record.id}}>
-          <img class="thumb-image {{unless record.available 'grayed-image'}}" src="{{record.imageUrl}}" />
+      <div class="large-3 medium-3 columns cart-redirect-link {{if (is-not row.isAvailable) disabled}}" {{action 'showItemDetails' row.record}}>
+          <img class="thumb-image {{unless row.isAvailable 'grayed-image'}}" src="{{row.record.favouriteImage.cartImageUrl}}" />
       </div>
 
-      <div class="large-9 medium-9 columns cart-redirect-link {{if (is-not record.available) disabled}}" {{action 'updateCartItemParams' record.id}}>
-          {{record.name}}
-        {{#unless record.available}}
+      <div class="large-9 medium-9 columns cart-redirect-link {{if (is-not row.isAvailable) disabled}}" {{action 'showItemDetails' row.record}}>
+        {{row.record.packageType.name}}
+        
+        {{#unless row.isAvailable}}
           <div class="unavailable">{{t "cart_content.unavailable"}}</div>
         {{/unless}}
       </div>
