--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -1,7 +1,7 @@
 {{#if isMobileApp}}
   {{scroll-to-bottom customClass="confirm-booking-detail-info-scroll-arrow"}}
 {{/if}}
-<div class="row">
+<div class="row confirm-booking-page">
   <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12 book">
     <div class="row checkout_pages">
       <div class="small-12 columns">
@@ -51,9 +51,9 @@
       {{partial "order/goods_detail"}}
     {{/if}}
 
-    {{!-- Orders Package section --}}
+    {{!-- Cart section --}}
     {{#if order.isOnlineOrder }}
-      {{partial "order/orders_package_detail"}}
+      {{partial "order/embed_cart_detail"}}
     {{/if}}
 
     {{!-- Appointment details section --}}
