Adjust background image position

--- a/app/styles/templates/_home.scss
+++ b/app/styles/templates/_home.scss
@@ -75,8 +75,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    margin-left: -15%; // Have the woman of the picture in the center
   }
-  
+
   .intro-text{
     height: 100%;
     z-index: 2;
