--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -101,7 +101,9 @@
 
           <div class="item_details item_categories">
             {{#each item.allPackageCategories key="@index" as |category|}}
-              {{#link-to 'package_category' category class="category_link"}}<span class="underline_text">{{category.name}}</span>{{/link-to}}
+              <div class="category_link" {{action "viewChildCategory" category}}>
+                <span class="underline_text">{{category.name}}</span>
+              </div>
             {{/each}}
           </div>
         </div>
