--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -27,6 +27,27 @@
     }
   }
 
+  .order-selection {
+    input[type=radio] {
+      width: 1.2rem !important;
+      height: 1.2rem !important;
+      vertical-align: middle;
+      margin-left: 2%!important;
+      margin-top: -10% !important
+    }
+
+    .new-order-label {
+      margin-left: 12%;
+      color: white;
+      font-weight: lighter;
+    }
+
+    .order-label {
+      color: white;
+      margin-left: 3%;
+    }
+  }
+
   .id-type-radio-input{
     .custom_radio_buttons {
       border: 1px solid;
