--- a/app/templates/package_category.hbs
+++ b/app/templates/package_category.hbs
@@ -8,7 +8,7 @@
         {{/link-to}}
       </section>
       <div class="browse-item-navbar">
-        {{partial 'navbar'}}
+        {{partial 'breadcrumbs'}}
       </div>
     </section>
   </nav>
