fix css for select dropdown

--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -1,6 +1,9 @@
 .current{
-  #category_select{
+  select#category_select{
     color: #fff;
+    option{
+      color: black;
+    }
   }
 }
 .category_page{
