--- a/app/templates/submitted_orders.hbs
+++ b/app/templates/submitted_orders.hbs
@@ -28,7 +28,7 @@
               </label>
               {{radio-button
               name="selectReason"
-              id= order.id
+              id= "new_order"
               value="new_order"
               selection=orderId
               required='true'}}
