--- a/app/templates/_breadcrumbs.hbs
+++ b/app/templates/_breadcrumbs.hbs
@@ -1,6 +1,8 @@
 <nav class="breadcrumbs">
   {{!-- all goods --}}
-  {{#link-to 'browse' classNames="underline-link"}}{{t 'browse.all_goods'}}{{/link-to}}
+  <div class="underline-link" {{action 'clearFiltersAndRedirectToBrowse'}}>
+    {{t 'browse.all_goods'}}
+  </div>
   {{!-- level 1 of breadcrumb --}}
   <div {{action (mut selectedCategoryId)}}>
     <span class="category_name {{if isCategorySelected "underline-link" "current"}}">
