fix dropdown text not shown on clickin on windows chrome

--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -6,6 +6,15 @@
     }
   }
 }
+.package-category{
+  select {
+    color: #fff;
+
+    option {
+      color: black;
+    }
+  }
+}
 .category_page{
   .current{
     color: white !important;
