--- a/app/templates/submitted_orders.hbs
+++ b/app/templates/submitted_orders.hbs
@@ -29,7 +29,7 @@
               {{radio-button
               name="selectReason"
               id= "new_order"
-              value="new_order"
+              value= ""
               selection=orderId
               required='true'}}
             </div>
