--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -117,12 +117,47 @@
             border: 1px solid white;
           }
 
-          .section-title {
-            color:white;
-            top: 0.5rem;
-            font-family: $header-font-family;
-            padding-left: 6%;
-            margin-bottom: 1.5rem;
+          .update-order-block {
+            margin-left: 3%;
+            width: 90%;
+            color: #fff;
+
+            .updated-order-message {
+              background: #ED4C4E;
+              padding: .2rem;
+              margin-bottom: 3%;
+              margin-top: 0;
+              padding-bottom: 0.25rem!important;
+              font-size: 80%;
+              padding-left: 4%;
+            }
+
+            .update-note {
+              font-size: 75%;
+              width: 70%;
+              color: white;
+            }
+            .section-title {
+              top: 0.5rem;
+              font-family: $header-font-family;
+              margin-bottom: 1.5rem;
+            }
+
+            .browse-link {
+              padding-left: 3%;
+              height: 5%;
+              background: #334F75;
+              padding-top: 1%;
+              padding-bottom: 1%;
+              margin-top: -3%;
+
+              a {
+                cursor: pointer;
+                font-size: 80%;
+                padding-left: 2%;
+                text-decoration: underline;
+              }
+            }
           }
 
           // ---- PAIRS OF LABELS AND TEXT
