--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -137,6 +137,18 @@
               width: 70%;
               color: white;
             }
+
+            .fade-out {
+              @-webkit-keyframes fadeOut {
+                0%   {opacity: 0;}
+                15%  {opacity: 1;}
+                50%  {opacity: 1;}
+                100% {opacity: 0;}
+              }
+              animation: fadeOut 5s ease;
+              opacity: 0;
+            }
+
             .section-title {
               top: 0.5rem;
               font-family: $header-font-family;
