add beforeModel hook for checking submittedOrders

--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  .continue-submit-order {
+    margin-left: -1%;
+  }
+
   .order-selection {
     input[type=radio] {
       width: 1.2rem !important;
