--- a/app/templates/submitted_orders.hbs
+++ b/app/templates/submitted_orders.hbs
@@ -50,9 +50,11 @@
               </div>
             {{/each}}
           </div>
-            <div class="small-12 medium-12 columns">
+          <div class="row">
+            <div class="small-12 medium-12 columns continue-submit-order">
               <button class="button expand expand_button" {{action 'mergePackage'}}>{{t "continue"}}</button>
             </div>
+          </div>
         </section>
       </div>
     </div>
