translation added | minor CSS fixes added

--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -122,6 +122,10 @@
             width: 90%;
             color: #fff;
 
+            .fade-out-message {
+              margin-left: 2%;
+            }
+
             .updated-order-message {
               background: #ED4C4E;
               padding: .2rem;
