Fix list of items in cart summary widget + fix issue where 'show' button wouldn't respond on sidebar

--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -164,7 +164,8 @@
 .small-cart-view {
   background-color: inherit;
   padding: 0;
-  padding-right: 2rem;
+  padding-right: 1rem;
+  margin-bottom: 1rem;
 
   li:last-child {
     border-bottom: 1px solid;
