--- a/app/templates/cart_content/_full_view.hbs
+++ b/app/templates/cart_content/_full_view.hbs
@@ -4,7 +4,7 @@
   </p>
   <div class="row">
     <div class="small-6 columns">
-      <a {{action 'displayCart'}} class="button expand secondary">
+      <a {{action 'hideCart'}} class="button expand secondary">
         {{t "cart_content.continue_browsing"}}
       </a>
     </div>
