--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -24,6 +24,9 @@
           </nav>
         </section>
         <section class="main-section client-information large-10 large-offset-1 small-12 medium-12 columns">
+          {{#unless cart.isEmpty}}
+            {{small-cart-toggle-view}}
+          {{/unless}}
           <div class="request_purpose_title">{{t 'order.client_information.for_client'}}</div>
           <div class="row time_inputs purpose" >
             <div class=" custom_radio_buttons small-12 columns purpose">
