--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -147,8 +147,12 @@
                 0%   {opacity: 0;}
                 15%  {opacity: 1;}
                 50%  {opacity: 1;}
-                100% {opacity: 0;}
+                100% {
+                  opacity: 0;
+                  height: 100%;
+                }
               }
+              height: 0;
               animation: fadeOut 5s ease;
               opacity: 0;
             }
