--- a/app/templates/_breadcrumbs.hbs
+++ b/app/templates/_breadcrumbs.hbs
@@ -1,8 +1,8 @@
 <nav class="breadcrumbs">
   {{!-- all goods --}}
-  <div class="underline-link" {{action 'clearFiltersAndRedirectToBrowse'}}>
+  {{#link-to "browse" class="underline-link"}}
     {{t 'browse.all_goods'}}
-  </div>
+  {{/link-to}}
   {{!-- level 1 of breadcrumb --}}
   <div {{action (mut selectedCategoryId)}}>
     <span class="category_name {{if isCategorySelected "underline-link" "current"}}">
