change order selection width to 100%

--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -36,6 +36,8 @@
   }
 
   .order-selection {
+    width: 100%;
+
     input[type=radio] {
       width: 1.2rem !important;
       height: 1.2rem !important;
